# logchange

./: IMPROVEMENTS_SUMMARY.md  QUALITY_ASSESSMENT_GUIDE.md  README.md  SAMPLE_QUALITY_COMPARISON.md  logchange.py  pyproject.toml  requirements.txt
.github/workflows/: changelog.yml
scripts/: cache_utils.py  demo_commit_quality.py  gen_changelog.py  gen_commit_msg.py  run_experiment.py
src/logchange/: __init__.py  ai_summarizer.py  cli.py  config.py  formatters.py  git_utils.py  statistics.py
